--- a/.jscsrc
+++ b/.jscsrc
@@ -9,7 +9,7 @@
         "catch"
     ],
     "requireOperatorBeforeLineBreak": true,
-    "requireCamelCaseOrUpperCaseIdentifiers": true,
+    /*"requireCamelCaseOrUpperCaseIdentifiers": true,*/
     "maximumLineLength": {
       "value": 200,
       "allExcept": ["comments", "regex"]
