--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "echo \"no tests yet\""
+    "test": "istanbul cover node_modules/.bin/_mocha -- -- test/* test/**/*"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,9 @@
   "dependencies": {
     "bluebird": "^2.10.2",
     "gocardless": "^1.0.0-beta6",
+    "istanbul": "^0.4.0",
+    "lodash": "^3.10.1",
+    "mocha": "^2.3.3",
     "request": "^2.65.0"
   }
 }
