--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "istanbul cover node_modules/.bin/_mocha -- -- test/* test/**/*"
+    "test": "istanbul cover node_modules/.bin/_mocha -- -- test/*.t.js"
   },
   "repository": {
     "type": "git",
